<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- <string name="app_name">Job interview</string> -->
    <string name="app_name">Собеседование</string>
    <!-- <string name="action_settings">Settings</string> -->
    <string name="action_settings">Настройки</string>
    
    <!-- 000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000 -->
    
    <string name="MActiviry_edit_message">Введите ФИО</string>
    <string name="MActiviry_edit_message2">Дата рождения</string>
    <string name="MActiviry_edit_message3">Пол</string>
    <string name="MActiviry_edit_message4">Введите должность</string>
    <string name="MActiviry_edit_message5">Желаемый уровень зарплаты</string>
    <string name="MActiviry_edit_message6">Ваш телефон</string>
    <string name="MActiviry_edit_message7">Ваш электронный адрес</string>
    <string name="MActiviry_button_send">Отправить резюме</string>
    
    <!-- 000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000 -->
    
    <string name="DMActivity_hint_text_message">Не ввели ФИО</string>
    <string name="DMActivity_additionalfor_text_message">ФИО: </string>
    
    <string name="DMActivity_hint_text_message2">Не выбрали День рождения</string>
    <string name="DMActivity_additionalfor_text_message2">День рождения: </string>
      
    <string name="DMActivity_hint_text_message3">Не выбрали Пол</string>
    <string name="DMActivity_additionalfor_text_message3">Пол: </string>
    
    <string name="DMActivity_hint_text_message4">Не ввели Должность</string>
    <string name="DMActivity_additionalfor_text_message4">Должность: </string>
    
    <string name="DMActivity_hint_text_message5">Не ввели Зарплату</string>
    <string name="DMActivity_additionalfor_text_message5">Зарплата: </string>
        
    <string name="DMActivity_hint_text_message6">Не ввели Телефон</string>
    <string name="DMActivity_additionalfor_text_message6">Телефон: </string>
    
    <string name="DMActivity_hint_text_message7">Не ввели Электронный адрес</string>
    <string name="DMActivity_additionalfor_text_message7">Электронный адрес: </string>
    
    <string name="DMActivity_hint_text_message8">Письмо соискателю,\nотказ - пустое поле</string>
    <string name="DMActivity_accept_text_message8">Мы подумаем, чтобы принять Вас на работу.\n\n</string>
    <string name="DMActivity_dismiss_text_message8">Извините, но эта должность уже занята</string>
    <string name="DMActivity_button_send">Отправить ответ</string>
    
    
    <!-- <string name="title_activity_display_message">Answer</string> -->
	<string name="title_activity_display_message">Вердикт</string>
	
	<!-- 000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000 -->
    
    <!-- For sex spinner -->
    <string-array name="sex">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>
    <string name="selectSex">Выберете пол</string>
    
    
</resources>
